infra/k8s/local/admin.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-admin-bff-service
  namespace: spring-msa
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spring-admin-bff-service
  template:
    metadata:
      labels:
        app: spring-admin-bff-service
    spec:
      imagePullSecrets:
        - name: ghcr-secret
      containers:
        - name: spring-admin-bff-service
          image: ghcr.io/hyunmyungchoi/spring-admin-bff-service:latest
          ports:
            - containerPort: 8087
---
apiVersion: v1
kind: Service
metadata:
  name: spring-admin-bff-service
  namespace: spring-msa
spec:
  selector:
    app: spring-admin-bff-service
  ports:
    - port: 8087
      targetPort: 8087

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-admin-gateway
  namespace: spring-msa
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spring-admin-gateway
  template:
    metadata:
      labels:
        app: spring-admin-gateway
    spec:
      imagePullSecrets:
        - name: ghcr-secret
      containers:
        - name: spring-admin-gateway
          image: ghcr.io/hyunmyungchoi/spring-admin-gateway:latest
          ports:
            - containerPort: 8090
---
apiVersion: v1
kind: Service
metadata:
  name: spring-admin-gateway
  namespace: spring-msa
spec:
  selector:
    app: spring-admin-gateway
  ports:
    - port: 8090
      targetPort: 8090

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-admin-web
  namespace: spring-msa
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spring-admin-web
  template:
    metadata:
      labels:
        app: spring-admin-web
    spec:
      imagePullSecrets:
        - name: ghcr-secret
      containers:
        - name: spring-admin-web
          image: ghcr.io/hyunmyungchoi/spring-admin-web:latest
          ports:
            - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: spring-admin-web
  namespace: spring-msa
spec:
  selector:
    app: spring-admin-web
  ports:
    - port: 80
      targetPort: 80
