infra/k8s/local/auth-bff-shell.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-security-authorization-server
  namespace: spring-msa
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spring-security-authorization-server
  template:
    metadata:
      labels:
        app: spring-security-authorization-server
    spec:
      imagePullSecrets:
        - name: ghcr-secret
      containers:
        - name: spring-security-authorization-server
          image: ghcr.io/hyunmyungchoi/spring-security-authorization-server:latest
          ports:
            - containerPort: 9000
---
apiVersion: v1
kind: Service
metadata:
  name: spring-security-authorization-server
  namespace: spring-msa
spec:
  selector:
    app: spring-security-authorization-server
  ports:
    - port: 9000
      targetPort: 9000

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-bff-service
  namespace: spring-msa
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spring-bff-service
  template:
    metadata:
      labels:
        app: spring-bff-service
    spec:
      imagePullSecrets:
        - name: ghcr-secret
      containers:
        - name: spring-bff-service
          image: ghcr.io/hyunmyungchoi/spring-bff-service:latest
          ports:
            - containerPort: 8079
---
apiVersion: v1
kind: Service
metadata:
  name: spring-bff-service
  namespace: spring-msa
spec:
  selector:
    app: spring-bff-service
  ports:
    - port: 8079
      targetPort: 8079

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-shell-web
  namespace: spring-msa
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spring-shell-web
  template:
    metadata:
      labels:
        app: spring-shell-web
    spec:
      imagePullSecrets:
        - name: ghcr-secret
      containers:
        - name: spring-shell-web
          image: ghcr.io/hyunmyungchoi/spring-shell-web:latest
          ports:
            - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: spring-shell-web
  namespace: spring-msa
spec:
  selector:
    app: spring-shell-web
  ports:
    - port: 80
      targetPort: 80
