infra/k8s/local/domain.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-community-service
  namespace: spring-msa
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spring-community-service
  template:
    metadata:
      labels:
        app: spring-community-service
    spec:
      imagePullSecrets:
        - name: ghcr-secret
      containers:
        - name: spring-community-service
          image: ghcr.io/hyunmyungchoi/spring-community-service:latest
          ports:
            - containerPort: 8083
---
apiVersion: v1
kind: Service
metadata:
  name: spring-community-service
  namespace: spring-msa
spec:
  selector:
    app: spring-community-service
  ports:
    - port: 8083
      targetPort: 8083

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-stock-service
  namespace: spring-msa
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spring-stock-service
  template:
    metadata:
      labels:
        app: spring-stock-service
    spec:
      imagePullSecrets:
        - name: ghcr-secret
      containers:
        - name: spring-stock-service
          image: ghcr.io/hyunmyungchoi/spring-stock-service:latest
          ports:
            - containerPort: 8084
---
apiVersion: v1
kind: Service
metadata:
  name: spring-stock-service
  namespace: spring-msa
spec:
  selector:
    app: spring-stock-service
  ports:
    - port: 8084
      targetPort: 8084
