infra/k8s/local/minimal.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  namespace: spring-msa
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: postgres:16
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-data
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: postgres-data
          persistentVolumeClaim:
            claimName: postgres-data

---
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: spring-msa
spec:
  selector:
    app: postgres
  ports:
    - port: 5432
      targetPort: 5432

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  namespace: spring-msa
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
        - name: redis
          image: redis:7-alpine
          command:
            - redis-server
            - --requirepass
            - $(REDIS_PASSWORD)
          ports:
            - containerPort: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: spring-msa
spec:
  selector:
    app: redis
  ports:
    - port: 6379
      targetPort: 6379

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-user-service
  namespace: spring-msa
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spring-user-service
  template:
    metadata:
      labels:
        app: spring-user-service
    spec:
      imagePullSecrets:
        - name: ghcr-secret
      containers:
        - name: spring-user-service
          image: ghcr.io/hyunmyungchoi/spring-user-service:latest
          ports:
            - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: spring-user-service
  namespace: spring-msa
spec:
  selector:
    app: spring-user-service
  ports:
    - port: 8081
      targetPort: 8081

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-member-gateway
  namespace: spring-msa
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spring-member-gateway
  template:
    metadata:
      labels:
        app: spring-member-gateway
    spec:
      imagePullSecrets:
        - name: ghcr-secret
      containers:
        - name: spring-member-gateway
          image: ghcr.io/hyunmyungchoi/spring-member-gateway:latest
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: spring-member-gateway
  namespace: spring-msa
spec:
  selector:
    app: spring-member-gateway
  ports:
    - port: 8080
      targetPort: 8080
